--- a/projects.html
+++ b/projects.html
@@ -91,14 +91,14 @@
                 <div class="daily-card" data-category="study">
                     <span class="text-xs font-medium text-secondary bg-secondary/10 px-2 py-1 rounded">课堂学习</span>
                     <h3 class="text-xl font-bold mt-3 mb-2 text-primary">C语言</h3>
-                    <p class="text-gray-600 text-sm">想睡觉</p>
+                    <p class="text-gray-600 text-sm">认真敲代码，不如c++（doge）</p>
                 </div>
 
                 <!-- 日常卡片 2 -->
                 <div class="daily-card" data-category="campus">
                     <span class="text-xs font-medium text-secondary bg-secondary/10 px-2 py-1 rounded">校园活动</span>
                     <h3 class="text-xl font-bold mt-3 mb-2 text-primary">百团大战</h3>
-                    <p class="text-gray-600 text-sm">忘了没去</p>
+                    <p class="text-gray-600 text-sm">忘了没去，悲</p>
                 </div>
 
                 <!-- 日常卡片 3 -->
@@ -111,8 +111,8 @@
                 <!-- 日常卡片 4 -->
                 <div class="daily-card" data-category="hobby">
                     <span class="text-xs font-medium text-secondary bg-secondary/10 px-2 py-1 rounded">兴趣探索</span>
-                    <h3 class="text-xl font-bold mt-3 mb-2 text-primary">抽卡</h3>
-                    <p class="text-gray-600 text-sm">谁有强度谁就是我的兴趣</p>
+                    <h3 class="text-xl font-bold mt-3 mb-2 text-primary">画画</h3>
+                    <p class="text-gray-600 text-sm">一直想，一直不付诸实践</p>
                 </div>
 
                 <!-- 日常卡片 5 -->
@@ -125,8 +125,8 @@
                 <!-- 日常卡片 6 -->
                 <div class="daily-card" data-category="campus">
                     <span class="text-xs font-medium text-secondary bg-secondary/10 px-2 py-1 rounded">校园活动</span>
-                    <h3 class="text-xl font-bold mt-3 mb-2 text-primary">风蓝萌歌会</h3>
-                    <p class="text-gray-600 text-sm">花了30买社刊，猛猛爆米</p>
+                    <h3 class="text-xl font-bold mt-3 mb-2 text-primary">计科迎新会</h3>
+                    <p class="text-gray-600 text-sm">乖乖欣赏</p>
                 </div>
             </div>
         </div>
