--- a/skills.html
+++ b/skills.html
@@ -287,7 +287,7 @@
             const skillsChart = new Chart(ctx, {
                 type: 'radar',
                 data: {
-                    labels: ['吃零食', '熬夜', '看小说', '打游戏', '听歌', '看动漫', '看漫画'],
+                    labels: ['吃零食', '看书', '写作', '追剧', '听歌', '旅行', '运动'],
                     datasets: [{
                         label: '技能水平',
                         data: [70, 85, 80, 75, 70, 85, 80],
